[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/cutscenes/Intro cutscene.png" type="Texture" id=1]
[ext_resource path="res://audio/music/maker.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/IntroCutscene.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Pixellari.ttf" type="DynamicFontData" id=4]

[sub_resource type="Animation" id=1]
resource_name = "ok"
length = 34.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2.5, 4.3, 4.8, 6.4, 7.2, 10.4, 10.9, 13.5, 14, 17.6, 18.6, 21.3, 22.3, 27, 28, 31.5, 32.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 2, 4, 2, 5, 2, 6, 2, 7, 2, 8, 2, 9, 2, 11, 13, 14 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 32.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="DynamicFont" id=2]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="IntroCutscene" type="Node2D"]
script = ExtResource( 3 )
next_level = "res://Levels/Level1.tscn"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
hframes = 15
frame = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ok = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0
bus = "Music"

[node name="EscapeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = 374.898
margin_top = 3.56762
margin_right = 475.898
margin_bottom = 38.5676
custom_fonts/font = SubResource( 2 )
text = "Press Again
To Skip"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EscapeTimer" to="." method="_on_EscapeTimer_timeout"]
